[package]
name = "exalt-build"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.1", features = ["derive"] }
exalt-ast = { path = "../exalt-ast" }
exalt-decompiler = { path = "../exalt-decompiler" }
exalt-compiler = { path = "../exalt-compiler" }
exalt-disassembler = { path = "../exalt-disassembler" }
serde = { version = "1.0", features = ["derive"] }
exalt-lir = { path = "../exalt-lir" }
toml = "0.5.9"
walkdir = "2.3.2"
