[package]
name = "exalt-cli"
version = "0.1.0"
authors = ["thane98"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exalt = { path = "../exalt" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
clap = "3.0.0-beta.2"