[package]
name = "exalt-cli"
version = "0.1.0"
authors = ["thane98"]
edition = "2018"

[dependencies]
clap = { version = "3.1", features = ["derive"] }
exalt-assembler = { path = "../exalt-assembler" }
exalt-disassembler = { path = "../exalt-disassembler" }
exalt-decompiler = { path = "../exalt-decompiler" }
exalt-compiler = { path = "../exalt-compiler" }
exalt-ast = { path = "../exalt-ast" }
exalt-lir = { path = "../exalt-lir" }
ron = { version = "0.7.0", features = ["indexmap"] }
serde_json = "1.0.81"
serde_yaml = "0.8.24"
strum = "0.24.0"
strum_macros = "0.24.0"
anyhow = "1.0.57"
