[package]
name = "exalt-testing"
version = "0.1.0"
authors = ["thane98"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exalt = { path = "../exalt" }
clap = "3.0.0-beta.2"
walkdir = "2"
anyhow = "1.0"
encoding_rs = "0.8.28"
byteorder = "1.4.3"