[package]
name = "exalt-testing"
version = "0.1.0"
authors = ["thane98"]
edition = "2018"

[dependencies]
clap = { version = "3.1", features = ["derive"] }
exalt-assembler = { path = "../exalt-assembler" }
exalt-disassembler = { path = "../exalt-disassembler" }
exalt-decompiler = { path = "../exalt-decompiler" }
exalt-compiler = { path = "../exalt-compiler" }
exalt-lir = { path = "../exalt-lir" }
rustc-hash = "1.1.0"
walkdir = "2"
byteorder = "1.4.3"
anyhow = "1.0.57"
encoding_rs = "0.8.31"