[package]
name = "exalt"
version = "0.1.0"
authors = ["thane98"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
byteorder = "1.4.3"
anyhow = "1.0"
lazy_static = "1.4.0"
maplit = "1.0.2"
encoding_rs = "0.8.28"
